--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,7 +5,7 @@ linter:
   rules:
     - camel_case_types
     - hash_and_equals
-    - iterable_contains_unrelated_type
-    - list_remove_unrelated_type
+    # - iterable_contains_unrelated_type
+    # - list_remove_unrelated_type
     - unrelated_type_equality_checks
     - valid_regexps
